crates/pgls_pretty_print/tests/snapshots/multi/tests__misc_sanity_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/misc_sanity.sql
snapshot_kind: text
---
SELECT
  *
FROM
  pg_depend AS d1
WHERE
  refclassid = 0 OR
  refobjid = 0 OR
  classid = 0 OR
  objid = 0 OR
  deptype
  NOT IN (
    'a', 'e', 'i', 'n', 'x', 'P', 'S'
  );

SELECT
  *
FROM
  pg_shdepend AS d1
WHERE
  refclassid = 0 OR
  refobjid = 0 OR
  classid = 0 OR
  objid = 0 OR
  deptype NOT IN ('a', 'i', 'o', 'r', 't');

SELECT
  relname,
  attname,
  CAST(atttypid AS REGTYPE)
FROM
  pg_class AS c
  INNER JOIN
    pg_attribute AS a
  ON c.oid = attrelid
WHERE
  c.oid < 16384 AND
  reltoastrelid = 0 AND
  relkind = 'r' AND
  attstorage <> 'p'
ORDER BY 1,
  2;

SELECT
  relname
FROM
  pg_class
WHERE
  relnamespace =
  CAST('pg_catalog' AS regnamespace) AND
  relkind = 'r' AND
  NOT pg_class.oid IN
  (SELECT
    indrelid
  FROM
    pg_index
  WHERE
    indisprimary)
ORDER BY 1;

SELECT
  relname
FROM
  pg_class AS c
  INNER JOIN
    pg_index AS i
  ON c.oid = i.indexrelid
WHERE
  relnamespace =
  CAST('pg_catalog' AS regnamespace) AND
  relkind = 'i' AND
  i.indisunique AND
  NOT c.oid IN
  (SELECT conindid FROM pg_constraint)
ORDER BY 1;
