crates/pgls_pretty_print/tests/snapshots/multi/tests__money_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/money_100.sql
snapshot_kind: text
---
CREATE TABLE money_data (m MONEY);

INSERT INTO money_data VALUES ('123');

SELECT * FROM money_data;

SELECT m + '123' FROM money_data;

SELECT m + '123.45' FROM money_data;

SELECT m - '123.45' FROM money_data;

SELECT m / CAST('2' AS MONEY) FROM money_data;

SELECT m * 2 FROM money_data;

SELECT 2 * m FROM money_data;

SELECT m / 2 FROM money_data;

SELECT m * CAST(2 AS SMALLINT) FROM money_data;

SELECT CAST(2 AS SMALLINT) * m FROM money_data;

SELECT m / CAST(2 AS SMALLINT) FROM money_data;

SELECT m * CAST(2 AS BIGINT) FROM money_data;

SELECT CAST(2 AS BIGINT) * m FROM money_data;

SELECT m / CAST(2 AS BIGINT) FROM money_data;

SELECT m * CAST(2 AS DOUBLE PRECISION) FROM money_data;

SELECT CAST(2 AS DOUBLE PRECISION) * m FROM money_data;

SELECT m / CAST(2 AS DOUBLE PRECISION) FROM money_data;

SELECT m * CAST(2 AS REAL) FROM money_data;

SELECT CAST(2 AS REAL) * m FROM money_data;

SELECT m / CAST(2 AS REAL) FROM money_data;

SELECT m = '$123.00' FROM money_data;

SELECT m <> '$124.00' FROM money_data;

SELECT m <= '$123.00' FROM money_data;

SELECT m >= '$123.00' FROM money_data;

SELECT m < '$124.00' FROM money_data;

SELECT m > '$122.00' FROM money_data;

SELECT m = '$123.01' FROM money_data;

SELECT m <> '$123.00' FROM money_data;

SELECT m <= '$122.99' FROM money_data;

SELECT m >= '$123.01' FROM money_data;

SELECT m > '$124.00' FROM money_data;

SELECT m < '$122.00' FROM money_data;

SELECT cashlarger(m, '$124.00') FROM money_data;

SELECT cashsmaller(m, '$124.00') FROM money_data;

SELECT cash_words(m) FROM money_data;

SELECT cash_words(m + '1.23') FROM money_data;

DELETE FROM money_data;

INSERT INTO money_data VALUES ('$123.45');

SELECT * FROM money_data;

DELETE FROM money_data;

INSERT INTO money_data VALUES ('$123.451');

SELECT * FROM money_data;

DELETE FROM money_data;

INSERT INTO money_data VALUES ('$123.454');

SELECT * FROM money_data;

DELETE FROM money_data;

INSERT INTO money_data VALUES ('$123.455');

SELECT * FROM money_data;

DELETE FROM money_data;

INSERT INTO money_data VALUES ('$123.456');

SELECT * FROM money_data;

DELETE FROM money_data;

INSERT INTO money_data VALUES ('$123.459');

SELECT * FROM money_data;

SELECT CAST('1234567890' AS MONEY);

SELECT CAST('12345678901234567' AS MONEY);

SELECT CAST('123456789012345678' AS MONEY);

SELECT CAST('9223372036854775807' AS MONEY);

SELECT CAST('-12345' AS MONEY);

SELECT CAST('-1234567890' AS MONEY);

SELECT CAST('-12345678901234567' AS MONEY);

SELECT CAST('-123456789012345678' AS MONEY);

SELECT CAST('-9223372036854775808' AS MONEY);

SELECT CAST('(1)' AS MONEY);

SELECT CAST('($123,456.78)' AS MONEY);

SELECT pg_input_is_valid('\x0001', 'money');

SELECT * FROM pg_input_error_info('\x0001', 'money');

SELECT pg_input_is_valid('192233720368547758.07', 'money');

SELECT * FROM pg_input_error_info('192233720368547758.07', 'money');

SELECT CAST('-92233720368547758.08' AS MONEY);

SELECT CAST('92233720368547758.07' AS MONEY);

SELECT CAST('-92233720368547758.09' AS MONEY);

SELECT CAST('92233720368547758.08' AS MONEY);

SELECT CAST('-92233720368547758.085' AS MONEY);

SELECT CAST('92233720368547758.075' AS MONEY);

SELECT CAST('878.08' AS MONEY) / CAST(11 AS DOUBLE PRECISION);

SELECT CAST('878.08' AS MONEY) / CAST(11 AS REAL);

SELECT CAST('878.08' AS MONEY) / CAST(11 AS BIGINT);

SELECT CAST('878.08' AS MONEY) / CAST(11 AS INT);

SELECT CAST('878.08' AS MONEY) / CAST(11 AS SMALLINT);

SELECT CAST('90000000000000099.00' AS MONEY) / CAST(10 AS BIGINT);

SELECT CAST('90000000000000099.00' AS MONEY) / CAST(10 AS INT);

SELECT CAST('90000000000000099.00' AS MONEY) / CAST(10 AS SMALLINT);

SELECT CAST(1234567890 AS MONEY);

SELECT CAST(12345678901234567 AS MONEY);

SELECT CAST(-12345 AS MONEY);

SELECT CAST(-1234567890 AS MONEY);

SELECT CAST(-12345678901234567 AS MONEY);

SELECT CAST(CAST(1234567890 AS INT) AS MONEY);

SELECT CAST(CAST(12345678901234567 AS BIGINT) AS MONEY);

SELECT CAST(CAST(12345678901234567 AS NUMERIC) AS MONEY);

SELECT CAST(CAST(-1234567890 AS INT) AS MONEY);

SELECT CAST(CAST(-12345678901234567 AS BIGINT) AS MONEY);

SELECT CAST(CAST(-12345678901234567 AS NUMERIC) AS MONEY);

SELECT CAST(CAST('12345678901234567' AS MONEY) AS NUMERIC);

SELECT CAST(CAST('-12345678901234567' AS MONEY) AS NUMERIC);

SELECT CAST(CAST('92233720368547758.07' AS MONEY) AS NUMERIC);

SELECT CAST(CAST('-92233720368547758.08' AS MONEY) AS NUMERIC);

SELECT CAST('92233720368547758.07' AS MONEY) + CAST('0.01' AS MONEY);

SELECT CAST('-92233720368547758.08' AS MONEY) - CAST('0.01' AS MONEY);

SELECT CAST('92233720368547758.07' AS MONEY) * CAST(2 AS DOUBLE PRECISION);

SELECT CAST('-1' AS MONEY) / CAST(1.175494e-38 AS REAL);

SELECT CAST('92233720368547758.07' AS MONEY) * CAST(2 AS INT);

SELECT CAST('1' AS MONEY) / CAST(0 AS SMALLINT);

SELECT CAST('42' AS MONEY) * CAST('inf' AS DOUBLE PRECISION);

SELECT CAST('42' AS MONEY) * CAST('-inf' AS DOUBLE PRECISION);

SELECT CAST('42' AS MONEY) * CAST('nan' AS REAL);
